--- a/ClientApp/src/app/movie/movie.component.html
+++ b/ClientApp/src/app/movie/movie.component.html
@@ -10,6 +10,7 @@
             <td>{{m.title}}</td>
             <td>{{m.showtimes}}</td>
             <td>{{m.description}}</td>
+            <button (click)='Showtimes(m.id)'><td>ShowTimes</td></button>
         </tr>
     </tbody>
 </table>
