--- a/ClientApp/src/styles.css
+++ b/ClientApp/src/styles.css
@@ -1,6 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
 /* Provide sufficient contrast against white background */
+body {
+  background-color: rgb(138, 153, 180);
+}
 a {
   color: #0366d6;
 }
